chore: renamed videos endpoint to uploads
